--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Cabecalho -->
     <header>
         <div class="menu">
-            <h1>Omega Extitores</h1>
+            <h1>Omega Extintores</h1>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="pg-atual">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -25,11 +25,11 @@
     <!-- fim do cabecalho -->
 
     <!-- main home -->
-    <main>
+    <main class="home">
         <!-- home-text -->
         <section class="home">
             <div class="home-text">
-                <h2>Omega<span> Extitores</span></h2>
+                <h2>Omega<span> Extintores</span></h2>
                 <h2>Proteja seu patrimônio e cuide da segurança! 🔥</h2>
                 <p>Somos especialistas na <a href="produtos.html">venda e recarga de extintores</a>, oferecendo os
                     melhores produtos e serviços para garantir sua tranquilidade. 🌟</p>
@@ -74,7 +74,7 @@
     <!--placas-->
     <section class="placas">
         <div class="placas-text">
-            <h2>Placas de sinalização ABNT</h2>
+            <h2>Placas de sinalização  linha ABNT</h2>
             <p>As placas de segurança contra incêndio são essenciais e seguem as normas ABNT. Por serem feitas de
                 materiais de alta qualidade, essas placas possuem vida útil prolongada e são fotoluminescentes. Isso
                 significa que brilham no escuro após absorver luz, garantindo visibilidade e segurança durante
